NEXT-16663 - Add items to an order

--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-custom-item/sw-order-custom-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-custom-item/sw-order-custom-item.html.twig
@@ -1,6 +1,9 @@
 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
 {% block sw_order_custom_item %}
-<div class="sw-order-custom-item">
+<div
+    class="sw-order-custom-item"
+    style="height: calc(100vh - 400px)"
+>
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_order_custom_item_container %}
     <sw-container
