--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-initial-modal/sw-order-create-initial-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-initial-modal/sw-order-create-initial-modal.scss
@@ -1,4 +1,8 @@
 .sw-order-create-initial-modal {
+    &.sw-modal .sw-modal__body .sw-data-grid .sw-data-grid__bulk {
+        padding-left: 70px;
+    }
+
     .sw-modal__body {
         height: 700px;
     }
