--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-credit-item/sw-order-credit-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-credit-item/sw-order-credit-item.html.twig
@@ -1,6 +1,9 @@
 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
 {% block sw_order_credit_item %}
-<div class="sw-order-credit-item">
+<div
+    class="sw-order-credit-item"
+    style="height: calc(100vh - 400px)"
+>
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_order_credit_item_container %}
     <sw-container
