--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-product-grid/sw-order-product-grid.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-product-grid/sw-order-product-grid.html.twig
@@ -16,7 +16,10 @@
     </template>
 
     <template #grid>
-        <div class="sw-order-product-grid__container">
+        <div
+            class="sw-order-product-grid__container"
+            style="height: calc(100vh - (400px + 91px))"
+        >
             <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
             {% block sw_order_product_grid_product_list %}
             <sw-entity-listing
