--- a/src/Administration/Resources/app/administration/src/module/sw-settings-seo/component/sw-seo-url-template-card/sw-seo-url-template-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-seo/component/sw-seo-url-template-card/sw-seo-url-template-card.html.twig
@@ -11,6 +11,15 @@
             @change-sales-channel-id="onSalesChannelChanged"
         />
     </template>
+
+    {% block sw_seo_url_template_card_info_box %}
+    <sw-alert
+        :title="$tc('sw-seo-url-template-card.general.headlineInfoMessageBoxEmptyProperties')"
+    >
+        <span>{{ $tc('sw-seo-url-template-card.general.textInfoMessageBoxEmptyProperties') }}</span>
+    </sw-alert>
+    {% endblock %}
+
     {% block sw_seo_url_template_card_entries %}
     <template v-if="!isLoading && !salesChannelIsHeadless">
         <div
