--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-modal/sw-order-document-settings-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-modal/sw-order-document-settings-modal.html.twig
@@ -146,7 +146,10 @@
                 {% endblock %}
 
                 {% block sw_order_document_settings_modal_form_document_footer_split_button_context %}
-                <sw-context-button :disabled="!documentPreconditionsFulfilled">
+                <sw-context-button
+                    v-if="feature.isActive('FEATURE_NEXT_7530')"
+                    :disabled="!documentPreconditionsFulfilled"
+                >
                     {% block sw_order_document_settings_modal_form_document_footer_split_button_context_arrow %}
                     <sw-button
                         slot="button"
