--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.html.twig
@@ -18,8 +18,19 @@
         class="sw-cms-list-item__image"
         :style="previewMedia"
         @click="onItemClick(page)"
-    ></div>
-
+    >
+        <div v-if="isDefault">
+            <span
+                v-if="page.type === 'product_list'"
+                class="sw-cms-list-item__is-default"
+            >{{ $tc('sw-cms.components.cmsListItem.defaultLayoutProductList') }}</span>
+            <!-- @deprecated tag:v6.5.0 default layouts for products will be enabled -->
+            <span
+                v-else-if="page.type === 'product_detail' && feature.isActive('v6.5.0.0')"
+                class="sw-cms-list-item__is-default"
+            >{{ $tc('sw-cms.components.cmsListItem.defaultLayoutProductDetail') }}</span>
+        </div>
+    </div>
     <div
         v-else
         class="sw-cms-list-item__image is--empty"
