NEXT-22028 - Add block to show custom bulk action in order line item

--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -288,6 +288,8 @@
             </sw-context-menu-item>
             {% endblock %}
 
+            {% block sw_order_line_items_grid_grid_actions_extension %}{% endblock %}
+
             {% block sw_order_line_items_grid_grid_actions_delete %}
             <sw-context-menu-item
                 v-if="feature.isActive('FEATURE_NEXT_7530')"
@@ -324,6 +326,7 @@
             </a>
             {% endblock %}
 
+            {% block sw_order_line_items_grid_bulk_actions_extension %}{% endblock %}
         </template>
         {% endblock %}
         {% endblock %}
