NEXT-22229 - Improve flow deleting error

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-list/sw-flow-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-list/sw-flow-list.html.twig
@@ -137,9 +137,9 @@
                         @modal-close="onCloseDeleteModal"
                     >
                         {% block sw_flow_list_grid_action_modal_confirm_delete_text %}
-                        <p class="sw-flow-list__confirm-delete-text">
-                            {{ $tc('sw-flow.list.confirmText') }}
-                        </p>
+                        <sw-alert variant="warning">
+                            {{ deleteWarningMessage() }}
+                        </sw-alert>
                         {% endblock %}
 
                         <template #modal-footer>
@@ -165,7 +165,9 @@
 
                 {% block sw_flow_list_grid_bulk_modal_delete_confirm_text %}
                 <template #bulk-modal-delete-confirm-text="{ selectionCount }">
-                    {{ $tc('global.entity-components.deleteMessage', selectionCount, { count: selectionCount }) }}
+                    <sw-alert variant="warning">
+                        {{ bulkDeleteWarningMessage(selectionCount) }}
+                    </sw-alert>
                 </template>
                 {% endblock %}
             </sw-entity-listing>
