NEXT-22450 - Creating order modal improvements

--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-initial-modal/sw-order-create-initial-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-initial-modal/sw-order-create-initial-modal.html.twig
@@ -3,6 +3,7 @@
     class="sw-order-create-initial-modal"
     :closable="false"
     :title="$tc('sw-order.initialModal.titleNewOrder')"
+    variant="large"
     @modal-close="onCloseModal"
 >
     <template #default>
