--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-product-grid/sw-order-product-grid.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-product-grid/sw-order-product-grid.scss
@@ -9,6 +9,18 @@
 
     .sw-order-product-grid-product-list {
         max-height: 500px;
+
+        .sw-data-grid__header .sw-data-grid__row th:first-child {
+            pointer-events: none;
+
+            .sw-data-grid__cell-content {
+                display: none;
+            }
+        }
+
+        .sw-data-grid__action-edit-column {
+            display: none;
+        }
     }
 
     .sw-product-variant-info {
@@ -28,5 +40,9 @@
         width: 60px;
         max-width: 60px;
         min-width: 60px;
+    }
+
+    .sw-order-product-grid__container .sw-data-grid .sw-data-grid__wrapper .sw-data-grid__bulk {
+        padding-left: 70px;
     }
 }
