--- a/src/Core/Framework/Resources/views/documents/delivery_note.html.twig
+++ b/src/Core/Framework/Resources/views/documents/delivery_note.html.twig
@@ -47,7 +47,9 @@ The blocks from the templates in the /includes folder can be overwritten directl
 
 {% block document_side_info_contents %}
     {{ parent() }}
-    <tr><td>{% trans with {'%deliveryDate%': config.custom.deliveryDate|format_date('medium', locale=order.language.locale.code)} %}document.deliveryDate{% endtrans %}</td></tr>
+    {% block document_side_info_delivery_note_deliveryDate %}
+        <tr><td>{% trans with {'%deliveryDate%': config.custom.deliveryDate|format_date('medium', locale=order.language.locale.code)} %}document.deliveryDate{% endtrans %}</td></tr>
+    {% endblock %}
 {% endblock %}
 
 {% block document_line_item_table_shipping %}
