--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar.html.twig
@@ -141,6 +141,9 @@
                     :label="$tc('sw-cms.detail.label.blockCategorySelection')"
                 >
                     {% block sw_cms_sidebar_block_overview_category_options %}
+                    <option value="favorite">
+                        {{ $tc('sw-cms.detail.label.blockCategoryFavorite') }}
+                    </option>
                     <option value="text">
                         {{ $tc('sw-cms.detail.label.blockCategoryText') }}
                     </option>
@@ -171,21 +174,54 @@
             <div
                 class="sw-cms-sidebar__block-selection"
             >
+                <sw-empty-state
+                    icon="solid-heart"
+                    auto-height
+                    :absolute="false"
+                    v-if="cmsBlocksBySelectedBlockCategory.length === 0 && currentBlockCategory === 'favorite'"
+                >
+                    {{ $tc('sw-cms.detail.label.blockFavoriteEmptyState') }}
+                </sw-empty-state>
                 <!-- eslint-disable vue/no-use-v-if-with-v-for -->
                 <div
-                    v-for="block in cmsBlocks"
-                    v-if="block.category === currentBlockCategory && block.hidden !== true"
+                    v-for="block in cmsBlocksBySelectedBlockCategory"
                     :key="block.name"
+                    class="sw-cms-sidebar__block"
                 >
 
-                    <div
-                        v-draggable="{ dragGroup: 'cms-stage', data: { block }, onDrop: onBlockStageDrop }"
-                        class="sw-cms-sidebar__block-preview"
-                        :class="{ 'has--no-label': !block.label }"
-                    >
+                    <div class="sw-cms-sidebar__block-preview-with-actions">
+                        <div
+                            v-draggable="{ dragGroup: 'cms-stage', data: { block }, onDrop: onBlockStageDrop }"
+                            class="sw-cms-sidebar__block-preview"
+                            :class="{ 'has--no-label': !block.label }"
+                        >
 
-                        {% block sw_cms_sidebar_block_overview_preview_component %}
-                        <component :is="block.previewComponent" />
+                            {% block sw_cms_sidebar_block_overview_preview_component %}
+                            <component :is="block.previewComponent" />
+                            {% endblock %}
+                        </div>
+
+                        {% block sw_cms_sidebar_block_overview_preview_favorite_action %}
+                        <sw-button
+                            class="sw-cms-sidebar__block-favorite"
+                            size="small"
+                            @click="onToggleBlockFavorite(block.name)"
+                            square
+                            block
+                        >
+                            <sw-icon
+                                v-if="cmsBlockFavorites.isFavorite(block.name)"
+                                name="solid-heart"
+                                size="20"
+                                class="sw-cms-sidebar__icon-cms-block-favorite"
+                            />
+                            <sw-icon
+                                v-else
+                                name="regular-heart"
+                                size="20"
+                                class="sw-cms-sidebar__icon-cms-block-favorite"
+                            />
+                        </sw-button>
                         {% endblock %}
                     </div>
 
