NEXT-22504 -  Fix button style issue in media upload component

--- a/src/Administration/Resources/app/administration/src/app/component/media/sw-media-upload-v2/sw-media-upload-v2.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/media/sw-media-upload-v2/sw-media-upload-v2.html.twig
@@ -208,9 +208,9 @@
                                 name="regular-plus"
                                 size="16px"
                             />
-                            <p v-else>
+                            <template v-else>
                                 {{ $tc('global.sw-media-upload-v2.buttonOpenMedia') }}
-                            </p>
+                            </template>
                         </sw-button>
                         {% endblock %}
 
