NEXT-19272 - Disable auto-save when moving blocks in the CMS sidebar

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
@@ -284,6 +284,7 @@
             {% endblock %}
 
             {% block sw_cms_detail_sidebar %}
+            {# @deprecated tag:v6.5.0 - Event listener will for 'block-navigator-sort' will be removed #}
             <sw-cms-sidebar
                 ref="cmsSidebar"
                 :page="page"
