--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.html.twig
@@ -75,10 +75,11 @@
             >
                 {% block sw_text_editor_toolbar_button_child_item %}
                 <div>
+                    {# @deprecated tag:v6.5.0 - Size can be removed #}
                     <sw-icon
                         v-if="child.icon"
                         :name="child.icon"
-                        size="16"
+                        size="18"
                     />
                     <div
                         v-else
