--- a/src/Administration/Resources/app/administration/src/app/component/media/sw-media-add-thumbnail-form/sw-media-add-thumbnail-form.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/media/sw-media-add-thumbnail-form/sw-media-add-thumbnail-form.html.twig
@@ -22,15 +22,10 @@
             :class="lockedButtonClass"
             @click="onLockSwitch"
         >
+            {# @deprecated tag:v6.5.0 - Size can be removed #}
             <sw-icon
-                v-if="isLocked"
-                name="regular-lock"
-                size="16"
-            />
-            <sw-icon
-                v-else
-                name="regular-lock-open"
-                size="16"
+                :name="isLocked ? 'regular-lock' : 'regular-lock-open'"
+                size="18"
             />
         </button>
         {% endblock %}
