--- a/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-permissions-modal/sw-extension-permissions-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-permissions-modal/sw-extension-permissions-modal.html.twig
@@ -52,9 +52,10 @@
                 @click="openDetailsModal(key)"
             >
                 {{ $tc('sw-extension-store.component.sw-extension-permissions-modal.textEntities') }}
+                {# @deprecated tag:v6.5.0 - Size can be removed #}
                 <sw-icon
                     name="regular-long-arrow-right"
-                    size="12"
+                    size="18"
                 />
             </sw-button>
             {% endblock %}
@@ -77,9 +78,10 @@
             >
                 {{ $tc('sw-extension-store.component.sw-extension-permissions-modal.showDomains') }}
 
+                {# @deprecated tag:v6.5.0 - Size can be removed #}
                 <sw-icon
                     name="regular-long-arrow-right"
-                    size="12"
+                    size="18"
                 />
             </sw-button>
         </div>
