NEXT-22691 - Add extension blocks for flow export in commercial plugin

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-change-customer-group-modal/sw-flow-change-customer-group-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-change-customer-group-modal/sw-flow-change-customer-group-modal.html.twig
@@ -20,6 +20,9 @@
     />
     {% endblock %}
 
+    {% block sw_flow_change_customer_group_modal_content_custom %}
+    {% endblock %}
+
     {% block sw_flow_change_customer_group_modal_footer %}
     <template #modal-footer>
         {% block sw_flow_change_customer_group_modal_footer_cancel_button %}
