--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-mail-send-modal/sw-flow-mail-send-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-mail-send-modal/sw-flow-mail-send-modal.html.twig
@@ -176,6 +176,9 @@
     </sw-alert>
     {% endblock %}
 
+    {% block sw_flow_mail_send_modal_custom %}
+    {% endblock %}
+
     {% block sw_flow_mail_send_modal_footer %}
     <template #modal-footer>
         {% block sw_flow_mail_send_modal_footer_cancel_button %}
