--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-tag-modal/sw-flow-tag-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-tag-modal/sw-flow-tag-modal.html.twig
@@ -32,6 +32,9 @@
             @item-remove="onRemoveTag"
         />
         {% endblock %}
+
+        {% block sw_flow_tag_modal_content_custom %}
+        {% endblock %}
     </div>
     {% endblock %}
 
