--- a/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-list/sw-flow-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-list/sw-flow-list.html.twig
@@ -39,6 +39,10 @@
 
     {% block sw_flow_list_smart_bar_actions %}
     <template #smart-bar-actions>
+
+        {% block sw_flow_list_smart_bar_actions_extension %}
+        {% endblock %}
+
         {% block sw_flow_list_smart_bar_actions_add %}
         <sw-button
             v-tooltip="{
@@ -106,6 +110,10 @@
 
                 {% block sw_flow_list_grid_actions %}
                 <template #actions="{ item }">
+
+                    {% block sw_flow_list_grid_actions_custom %}
+                    {% endblock %}
+
                     {% block sw_flow_list_grid_actions_edit %}
                     <sw-context-menu-item
                         class="sw-flow-list__item-edit"
@@ -131,7 +139,7 @@
                 {% block sw_flow_list_grid_action_modal %}
                 <template #action-modals="{ item }">
                     <sw-modal
-                        v-if="currentFlow.id === item.id"
+                        v-if="currentFlow.id === item.id && isDeleting"
                         variant="small"
                         :title="$tc('global.default.warning')"
                         @modal-close="onCloseDeleteModal"
@@ -189,6 +197,10 @@
                 {% endblock %}
             </sw-empty-state>
             {% endblock %}
+
+            {% block sw_flow_list_modal_content_custom %}
+            {% endblock %}
+
         </div>
     </template>
     {% endblock %}
