NEXT-21163 - Implement help center

--- a/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-page/sw-meteor-page.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-page/sw-meteor-page.html.twig
@@ -20,6 +20,10 @@
             </div>
 
             <div class="sw-meteor-page__head-area-global-actions">
+                {% block sw_meteor_page_help_center %}
+                <sw-help-center />
+                {% endblock %}
+
                 {% block sw_meteor_page_notification_center %}
                 <sw-notification-center />
                 {% endblock %}
