--- a/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-page/sw-meteor-page.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-page/sw-meteor-page.scss
@@ -122,6 +122,7 @@
         display: flex;
         align-content: flex-end;
         justify-content: flex-end;
+        gap: 16px;
     }
 
     .sw-meteor-page__smart-bar-tabs {
