--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-page/sw-page.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-page/sw-page.scss
@@ -48,6 +48,7 @@ $sw-page-search-bar-z-index: $z-index-sw-page-search-bar;
         display: flex;
         align-content: flex-end;
         justify-content: flex-end;
+        gap: 16px;
     }
 
     .sw-page__smart-bar-divider {
