--- a/src/Core/Framework/Resources/views/documents/includes/letter_header.html.twig
+++ b/src/Core/Framework/Resources/views/documents/includes/letter_header.html.twig
@@ -15,28 +15,36 @@ All blocks of this template are available in the template which renders this tem
             {% block document_recipient %}
                 {% set notSpecified = billingAddress.salutation.salutationKey is same as('not_specified') %}
 
-                {% block document_recipient_sender %}
-                    {% if config.displayCompanyAddress and config.companyAddress is not empty %}
-                        {{ config.companyAddress|replace({' - ': '</br>'})|raw }}<br><br>
-                    {% endif %}
-                {% endblock %}
+                {% if feature('v6.5.0.0') %}
+                    {% sw_include '@Framework/snippets/render.html.twig' with {
+                        format: billingAddress.country.translated.addressFormat,
+                        address: billingAddress
+                    } %}<br/>
+                {% else %}
+                    {# @deprecated tag:v6.5.0 - Block will be removed #}
+                    {% block document_recipient_sender %}
+                        {% if config.displayCompanyAddress and config.companyAddress is not empty %}
+                            {{ config.companyAddress|replace({' - ': '</br>'})|raw }}<br><br>
+                        {% endif %}
+                    {% endblock %}
 
-                {% if billingAddress.company %}
-                    {{ billingAddress.company }}<br>
+                    {% if billingAddress.company %}
+                        {{ billingAddress.company }}<br>
+                    {% endif %}
+                    {% if customer.customer.vatIds and billingAddress.country.companyTax.getEnabled and config.displayAdditionalNoteDelivery and billingAddress.country.id in config.deliveryCountries %}
+                        {{ 'document.vatId'|trans({'%vatId%': customer.customer.vatIds|first})|sw_sanitize }}<br>
+                    {% endif %}
+                    {% if not notSpecified and billingAddress.salutation and billingAddress.salutation.id is not same as(constant('Shopware\\Core\\Defaults::SALUTATION')) %}{{ billingAddress.salutation.displayName ~ ' ' }}{% endif %}{{ billingAddress.firstName }} {{ billingAddress.lastName }}<br>
+                    {{ billingAddress.street }}<br>
+                    {% if billingAddress.additionalAddressLine1 %}
+                        {{ billingAddress.additionalAddressLine1 }}<br>
+                    {% endif %}
+                    {% if billingAddress.additionalAddressLine2 %}
+                        {{ billingAddress.additionalAddressLine2 }}<br>
+                    {% endif %}
+                    {{ billingAddress.zipcode }} {{ billingAddress.city }}<br>
+                    {{ billingAddress.country.name }}<br>
                 {% endif %}
-                {% if customer.customer.vatIds and billingAddress.country.companyTax.getEnabled and config.displayAdditionalNoteDelivery and billingAddress.country.id in config.deliveryCountries %}
-                    {{ 'document.vatId'|trans({'%vatId%': customer.customer.vatIds|first})|sw_sanitize }}<br>
-                {% endif %}
-                {% if not notSpecified and billingAddress.salutation and billingAddress.salutation.id is not same as(constant('Shopware\\Core\\Defaults::SALUTATION')) %}{{ billingAddress.salutation.displayName ~ ' ' }}{% endif %}{{ billingAddress.firstName }} {{ billingAddress.lastName }}<br>
-                {{ billingAddress.street }}<br>
-                {% if billingAddress.additionalAddressLine1 %}
-                    {{ billingAddress.additionalAddressLine1 }}<br>
-                {% endif %}
-                {% if billingAddress.additionalAddressLine2 %}
-                    {{ billingAddress.additionalAddressLine2 }}<br>
-                {% endif %}
-                {{ billingAddress.zipcode }} {{ billingAddress.city }}<br>
-                {{ billingAddress.country.name }}<br>
             {% endblock %}
         </div>
 
